tests/compile_errors/utils/bad-import.buzz
fun yeah() > void {
    print(hello);
}